[package]
name = "twitch-irc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
chrono = "0.4.19"
